--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,22 @@
-# Compiled class file
+.eclipse
+
+target
+
+.project
+
+.classpath
+
+.settings
+
+.metadata
+
 *.class
 
-# Log file
-*.log
+classes/
 
-# BlueJ files
-*.ctxt
+.gitignore
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+src/main/webapp/WEB-INF/classes/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+*.iml
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
